Fixed spacings in details element. Added +/- icons and background image.

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -2,6 +2,7 @@ $white: hsl(0, 100%, 100%);
 $purple_100: hsl(275, 100%, 97%);
 $purple_600: hsl(292, 16%, 49%);
 $purple_950: hsl(292, 42%, 14%);
+$hover_color: #a52dda;
 
 * {
     box-sizing: border-box;
@@ -13,6 +14,9 @@ body {
     font-family: "Work Sans", sans-serif;
     font-weight: 400;
     background-color: $purple_100;
+    background-image: url("../assets/images/background-pattern-desktop.svg");
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 
 p {
